## $Id$

## This file is part of CDS Invenio.
## Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 CERN.
##
## CDS Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## CDS Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.  
##
## You should have received a copy of the GNU General Public License
## along with CDS Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

pylibdir = $(libdir)/python/invenio

pylib_DATA = oai_repository.py \
             oai_repository_config.py \
             oai_repository_tests.py \
             oai_repository_webinterface.py \
             oai_repository_regression_tests.py \
             bibharvest.py \
	     bibharvest_dblayer.py \
             bibharvest_templates.py \
             bibharvestadminlib.py \
             bibharvestadmin_regression_tests.py \
             oaiarchiveadminlib.py \
             oaiarchiveadmin_regression_tests.py \
             oaiharvestlib.py \
             oaiarchive_engine.py

EXTRA_DIST = $(pylib_DATA)

CLEANFILES = *~ *.tmp *.pyc
