# This file is part of Invenio.
# Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2015 CERN.
#
# Invenio is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

etcdir = $(sysconfdir)/bibrank

etc_DATA = bibrankgkb.cfg \
           bibrankgkb_jif_conv.kb \
           bibrankgkb_jif_example.kb \
           demo_jif.cfg \
           demo_jif.kb \
           stopwords.de.kb \
           stopwords.el.kb \
           stopwords.kb \
           template_citation.cfg \
           template_combine_method.cfg \
           template_download_similarity.cfg \
           template_download_total.cfg \
           template_download_users.cfg \
           template_read_recommendations.cfg \
           template_single_tag_rank_method.cfg \
           template_word_similarity.cfg \
           template_word_similarity_solr.cfg \
           template_word_similarity_xapian.cfg \
           wrd.cfg \
           citation.cfg \
           citerank_citation_t.cfg \
           citerank_pagerank_c.cfg \
           citerank_pagerank_t.cfg \
           selfcites.cfg \
           demo_itc_collection.cfg \
           template_index_term_count.cfg

EXTRA_DIST = bibrankgkb.cfg.in \
             bibrankgkb_jif_conv.kb \
             bibrankgkb_jif_example.kb \
             demo_jif.cfg.in \
             demo_jif.kb \
             stopwords.de.kb \
             stopwords.el.kb \
             stopwords.kb \
             template_citation.cfg \
             template_combine_method.cfg \
             template_download_similarity.cfg \
             template_download_total.cfg \
             template_download_users.cfg \
             template_read_recommendations.cfg \
             template_single_tag_rank_method.cfg.in \
             template_word_similarity.cfg \
             template_word_similarity_solr.cfg \
             template_word_similarity_xapian.cfg \
             wrd.cfg \
             citation.cfg \
             citerank_citation_t.cfg \
             citerank_pagerank_c.cfg \
             citerank_pagerank_t.cfg \
             selfcites.cfg \
             demo_itc_collection.cfg \
             template_index_term_count.cfg

CLEANFILES = *~ *.tmp
