## This file is part of Invenio.
## Copyright (C) 2010 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

tmpdir = $(prefix)/var/tmp

tmp_DATA = Test_marcxml_file_1.xml \
		   Test_marcxml_file_2.xml \
		   Test_marcxml_file_3.xml \
		   Test_media_deposit.xml \
		   Test_submission_status_submitted.xml \
		   Test_submission_status_published.xml \
		   Test_submission_status_onhold.xml \
		   Test_submission_status_unknown.xml

EXTRA_DIST = $(tmp_DATA)

CLEANFILES = *.tmp
