## This file is part of Invenio.
## Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

pylibdir = $(libdir)/python/invenio

pylib_DATA = docextract_pdf.py \
             docextract_text.py \
             docextract_utils.py \
             docextract_task.py \
             docextract_webinterface.py \
             docextract_webinterface_unit_tests.py \
             refextract.py \
             refextract_task.py \
             refextract_config.py \
             refextract_engine.py \
             refextract_re.py \
             refextract_api.py \
             refextract_api_unit_tests.py \
             refextract_text.py \
             refextract_xml.py \
             refextract_find.py \
             refextract_tag.py \
             refextract_cli.py \
             refextract_kbs.py \
             refextract_linker.py \
             refextract_regression_tests.py \
             refextract_unit_tests.py \
             authorextract_re.py


EXTRA_DIST = $(pylib_DATA)

CLEANFILES = *~ *.tmp *.pyc
